tests/xml/validxml/raDec/goodradec3.xml.README
goodradec3.xml: OK ra, dec is 0., 90., rmsCorr is 1.00
