tests/xml/invalidxml/raDec/badra4.xml.README
badra4.xml: BAD rmsCorr is too small -- [-1.0 .. 1.0]
